force-app/main/default/objects/Linked_Project__c/Linked_Project__c.object-meta.xml
<CustomObject>
    <label>Linked Project</label>
    <nameField>
        <displayFormat>LP-{000000000}</displayFormat>
        <label>Linked Project</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>