force-app/main/default/objects/Linked_Project__c/fields/Ethics_Request__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Request__c</fullName>
    <label>Ethics Request</label>
    <referenceTo>Ethics_Request__c</referenceTo>
    <relationshipLabel>Linked Projects</relationshipLabel>
    <relationshipName>Linked_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>