force-app/main/default/objects/Linked_Project__c/fields/Linked_Project_Grant_Contract__c.field-meta.xml
<CustomField>
    <fullName>Linked_Project_Grant_Contract__c</fullName>
    <label>Linked Project [Grant/Contract]</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Linked Projects</relationshipLabel>
    <relationshipName>Linked_Projects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>